feat: 新增AI工具调用记录功能，优化流式响应与前端交互
1.  新增工具调用记录表`ai_tool_call_record`及完整CRUD服务层
2.  重构AI流式响应：使用分段文本+工具调用的统一推送协议
3.  新增工具调用通知器，统一处理工具调用生命周期与持久化
4.  优化SSE事件类型，新增更清晰的文本增量与工具调用事件
5.  为聊天消息新增分段存储与工具调用关联字段
6.  简化PluginFileTool，通过通知器统一处理工具调用逻辑
7.  修复部分代码逻辑问题，优化会话消息查询