@@ -5,11 +5,13 @@ import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.example.demo.ai.ai.client.DynamicChatClientFactory;
 import com.example.demo.ai.ai.mapper.AIChatMessageMapper;
+import com.example.demo.ai.ai.mapper.AIToolCallRecordMapper;
 import com.example.demo.ai.ai.mapper.CodeMapper;
-import com.example.demo.ai.ai.mcp.PluginFileTool;
+import com.example.demo.ai.ai.mcp.ToolCallNotifier;
 import com.example.demo.ai.ai.pojo.dto.AIChatMessageDto;
 import com.example.demo.ai.ai.pojo.dto.CompileCodeDto;
 import com.example.demo.ai.ai.pojo.entity.AIChatMessage;
+import com.example.demo.ai.ai.pojo.entity.AIToolCallRecord;
 import com.example.demo.ai.ai.pojo.entity.Code;
 import com.example.demo.ai.ai.service.AIService;
 import com.example.demo.ai.ai.util.AIUtil;
@@ -36,6 +38,7 @@ import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
@@ -59,8 +62,10 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
     private final DynamicChatClientFactory chatClientFactory;
     private final PluginService pluginService;
     private final CodeMapper codeMapper;
+    private final AIToolCallRecordMapper toolCallRecordMapper;
+    private final ToolCallNotifier toolCallNotifier;
 
-    public AIServiceImpl(AIChatMessageMapper aiChatMessageMapper, DynamicChatClientFactory dynamicChatClientFactory, DefaultProperties defaultProperties, DynamicChatClientFactory chatClientFactory, ObjectMapper objectMapper, CompileUtil compileUtil, PluginService pluginService, CodeMapper codeMapper) {
+    public AIServiceImpl(AIChatMessageMapper aiChatMessageMapper, DynamicChatClientFactory dynamicChatClientFactory, DefaultProperties defaultProperties, DynamicChatClientFactory chatClientFactory, ObjectMapper objectMapper, CompileUtil compileUtil, PluginService pluginService, CodeMapper codeMapper, AIToolCallRecordMapper toolCallRecordMapper, ToolCallNotifier toolCallNotifier) {
         this.aiChatMessageMapper = aiChatMessageMapper;
         this.dynamicChatClientFactory = dynamicChatClientFactory;
         this.defaultProperties = defaultProperties;
@@ -69,6 +74,8 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
         this.compileUtil = compileUtil;
         this.pluginService = pluginService;
         this.codeMapper = codeMapper;
+        this.toolCallRecordMapper = toolCallRecordMapper;
+        this.toolCallNotifier = toolCallNotifier;
     }
 
     /**
@@ -81,9 +88,12 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
         List<AIChatMessage> aiChatMessages = aiChatMessageMapper.selectList(new LambdaQueryWrapper<AIChatMessage>()
                 .eq(AIChatMessage::getConversationId, conversationId)
                 .orderByAsc(AIChatMessage::getRound));
-        List<Code> codes = codeMapper.selectList(new LambdaQueryWrapper<Code>()
-                .eq(Code::getMessageId, aiChatMessages.getLast().getId()));
-        aiChatMessages.getLast().setCodes(codes);
+        if (!aiChatMessages.isEmpty()) {
+            List<Code> codes = codeMapper.selectList(new LambdaQueryWrapper<Code>()
+                    .eq(Code::getMessageId, aiChatMessages.get(aiChatMessages.size() - 1).getId()));
+            aiChatMessages.get(aiChatMessages.size() - 1).setCodes(codes);
+            attachToolCalls(aiChatMessages);
+        }
         return aiChatMessages;
     }
 
@@ -102,10 +112,7 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
 
     /**
      * 启动流式 AI 生成任务。
-     * 在 AI 流式输出过程中同步完成：
-     * 1. 8 字分块推送打字机效果（事件类型 "delta"）
-     * 2. 实时检测文件边界并通知前端（事件类型 "file_start" / "file_end"）
-     * 3. 增量构建 code JSON（依赖、插件信息、文件列表）
+     * 流式生成插件代码，并同步持久化 AI 文本分段与真实工具调用记录。
      *
      * @param message        用户指令文本
      * @param conversationId 会话 ID
@@ -118,7 +125,7 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
     public List<AIChatMessage> aiGenerate(String message, String conversationId, String userId,
                                           BiConsumer<String, Object> onEvent, AtomicBoolean cancelled) throws IOException {
 
-        // 0. 查询历史消息记录
+        // 查询历史消息记录
         List<AIChatMessage> messages = new ArrayList<>();
         if (conversationId != null) {
             aiChatMessageMapper.update(new LambdaUpdateWrapper<AIChatMessage>()
@@ -131,10 +138,16 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
         }
         String template = AIUtil.loadTemplate(pluginTemplatePath);
         AIChatMessage newMessage = buildNewMessage(message, conversationId, userId, messages);
+        aiChatMessageMapper.insert(newMessage);
+        if (newMessage.getCodes() != null) {
+            for (Code code : newMessage.getCodes()) {
+                codeMapper.insert(code);
+            }
+        }
         List<Message> springMessages = AIUtil.buildMessages(messages);
         String codeAbstract = buildCodeAbstract(newMessage.getCodes());
 
-        // 1. 构建用户提示词（messageId + 已有代码摘要 + 用户需求）
+        // 构建用户提示词（messageId + 已有代码摘要 + 用户需求）
         StringBuilder userPrompt = new StringBuilder();
         userPrompt.append("messageId: ").append(newMessage.getId()).append("\n\n");
         if (codeAbstract != null && !codeAbstract.isBlank() && !codeAbstract.equals("{\"codes\":[]}")) {
@@ -142,54 +155,49 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
         }
         userPrompt.append("用户需求：\n").append(message);
 
-        // 2. 组装完整消息列表：系统提示词 + 历史对话 + 当前用户消息
+        // 组装完整消息列表：系统提示词 + 历史对话 + 当前用户消息
         List<Message> promptMessages = new ArrayList<>();
         promptMessages.add(new SystemMessage(template));
         promptMessages.addAll(springMessages);
         promptMessages.add(new UserMessage(userPrompt.toString()));
 
-        // 3. 获取 ChatClient（已注册 PluginFileTool）
+        // 获取 ChatClient（已注册 PluginFileTool）
         ChatClient chatClient = dynamicChatClientFactory.getPluginChatClient(userId);
         StringBuilder aiResponse = new StringBuilder();
+        List<Map<String, Object>> messageParts = new ArrayList<>();
 
-        // 4. 流式调用 + 推送到前端
-        chatClient.prompt(new Prompt(promptMessages))
-                .stream()
-                .chatResponse()
-                .doOnNext(chatResponse -> {
-                    if (cancelled != null && cancelled.get()) {
-                        throw new RuntimeException("任务已取消");
-                    }
-
-                    var output = chatResponse.getResult().getOutput();
-
-                    // ── 工具调用：统一通过 PluginFileTool 构建事件数据 ──
-                    var toolCalls = output.getToolCalls();
-                    if (!toolCalls.isEmpty()) {
-                        for (var tc : toolCalls) {
-                            onEvent.accept("tool_call", PluginFileTool.buildEventData(tc, objectMapper));
+        // 流式调用，文本和工具调用都交给通知器追加 part 并推送前端。
+        toolCallNotifier.startSession(newMessage.getConversationId(), newMessage.getId(), newMessage.getRound(), messageParts, onEvent);
+        try {
+            chatClient.prompt(new Prompt(promptMessages))
+                    .stream()
+                    .chatResponse()
+                    .doOnNext(chatResponse -> {
+                        if (cancelled != null && cancelled.get()) {
+                            throw new RuntimeException("任务已取消");
                         }
-                        return;
-                    }
 
-                    // ── 普通文本：打字机推送 ──
-                    String text = output.getText();
-                    if (text != null && !text.isEmpty()) {
-                        aiResponse.append(text);
-                        for (int i = 0; i < text.length(); i += 8) {
-                            int end = Math.min(i + 8, text.length());
-                            onEvent.accept("delta", text.substring(i, end));
+                        var output = chatResponse.getResult().getOutput();
+                        String text = output.getText();
+                        if (text != null && !text.isEmpty()) {
+                            aiResponse.append(text);
+                            toolCallNotifier.appendAssistantText(text);
                         }
-                    }
-                })
-                .blockLast();
+                    })
+                    .blockLast();
+        } finally {
+            toolCallNotifier.closeSession();
+        }
 
         String aiResponseString = aiResponse.toString();
-        // 5. 持久化 AI 回复
+        // 持久化 AI 回复与分段结构。
         newMessage.setAiMessage(aiResponseString);
+        newMessage.setMessageParts(toJson(messageParts));
         aiChatMessageMapper.update(new LambdaUpdateWrapper<AIChatMessage>()
                 .set(AIChatMessage::getAiMessage, aiResponseString)
+                .set(AIChatMessage::getMessageParts, newMessage.getMessageParts())
                 .eq(AIChatMessage::getId, newMessage.getId()));
+        attachToolCalls(List.of(newMessage));
         messages.add(newMessage);
 
         return messages;
@@ -237,15 +245,15 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
                 .id(UUID.randomUUID().toString())
                 .conversationId(conversationId == null ? UUID.randomUUID().toString() : conversationId)
                 .userId(userId)
-                .round(conversationId == null ? 1 : messages.getLast().getRound() + 1)
+                .round(conversationId == null ? 1 : messages.isEmpty() ? 1 : messages.get(messages.size() - 1).getRound() + 1)
                 .userMessage(message)
                 .aiMessage(null)
-                .status(conversationId == null ? AIChatMessage.Status.DRAFT : messages.getLast().getStatus())
+                .status(conversationId == null ? AIChatMessage.Status.DRAFT : messages.isEmpty() ? AIChatMessage.Status.DRAFT : messages.get(messages.size() - 1).getStatus())
                 .createTime(LocalDateTime.now())
                 .build();
 
         if (!messages.isEmpty()){
-            AIChatMessage last = messages.getLast();
+            AIChatMessage last = messages.get(messages.size() - 1);
             messageBuilder.setPom(last.getPom());
             messageBuilder.setPluginId(last.getPluginId());
             messageBuilder.setPluginName(last.getPluginName());
@@ -260,7 +268,6 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
                 code.setMessageId(messageBuilder.getId());
             }
             messageBuilder.setCodes(codes);
-            codeMapper.insert(codes);
         }
         return messageBuilder;
     }
@@ -272,7 +279,7 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
         // 创建数组节点
         ArrayNode codesArray = rootNode.putArray("codes");
 
-        for (Code code : codes) {
+        for (Code code : codes == null ? List.<Code>of() : codes) {
             ObjectNode codeNode = codesArray.addObject();
             codeNode.put("id", code.getId());
             codeNode.put("path", code.getPath());
@@ -283,6 +290,25 @@ public class AIServiceImpl extends ServiceImpl<AIChatMessageMapper, AIChatMessag
             return mapper.writeValueAsString(rootNode);
         } catch (Exception e) {
             throw new RuntimeException("JSON 序列化失败", e);
+        }
+    }
+
+    private void attachToolCalls(List<AIChatMessage> messages) {
+        for (AIChatMessage message : messages) {
+            List<AIToolCallRecord> toolCalls = toolCallRecordMapper.selectList(new LambdaQueryWrapper<AIToolCallRecord>()
+                    .eq(AIToolCallRecord::getAssistantMessageId, message.getId())
+                    .orderByAsc(AIToolCallRecord::getPartIndex)
+                    .orderByAsc(AIToolCallRecord::getSequence));
+            message.setToolCalls(toolCalls);
+        }
+    }
+
+    private String toJson(Object value) {
+        try {
+            return objectMapper.writeValueAsString(value);
+        } catch (Exception e) {
+            log.warn("AI 消息分段序列化失败", e);
+            return "[]";
         }
     }
 }
